[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nekte"
version = "0.3.0"
description = "NEKTE Protocol — Token-efficient agent-to-agent coordination"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "BaronTech Labs", email = "hello@barontech.io" }]
keywords = ["agent", "a2a", "protocol", "llm", "token-efficient", "grpc", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "anyio>=4.4,<5.0",
]

[project.optional-dependencies]
grpc = ["grpcio>=1.65,<2.0", "grpcio-tools>=1.65,<2.0"]
server = ["starlette>=0.38,<1.0", "uvicorn>=0.30,<1.0"]
all = ["nekte[grpc,server]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.11",
    "ruff>=0.5",
    "coverage>=7.0",
]

[project.urls]
Homepage = "https://github.com/nekte-protocol/nekte-python"
Documentation = "https://nekte.dev"
Repository = "https://github.com/nekte-protocol/nekte-python"

[tool.hatch.build.targets.wheel]
packages = ["src/nekte"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
